# poplibs

./: .arcconfig  .arclint  .clang-format  .gitignore  .pre-commit-config.yaml  ActivationMapping.cpp  ActivationMapping.hpp  CMakeLists.txt  ConvLayer.cpp  ConvLayer.hpp  ConvPlan.cpp  ConvPlan.hpp  ConvReuse.cpp  ConvReuse.hpp  ConvUtil.cpp  ConvUtil.hpp  Convolution.cpp  Convolution.hpp  DeviceInfo.hpp  FullyConnected.cpp  FullyConnected.hpp  FullyConnectedLayer.cpp  FullyConnectedLayer.hpp  FullyConnectedPlan.cpp  FullyConnectedPlan.hpp  HilbertCurve.hpp  InputLayer.cpp  InputLayer.hpp  Layer.cpp  Layer.hpp  License.txt  LossLayer.cpp  LossLayer.hpp  Makefile  MaxPool.cpp  MaxPool.hpp  MaxPoolLayer.cpp  MaxPoolLayer.hpp  Net.cpp  Net.hpp  (+31 more)
benchmarks/: CMakeLists.txt  alexnet.cpp  arxiv1701.00008.cpp  benchmark_report.py  deepbench_conv.py  deepbench_matmul.py  deepbench_rnn.py  resnet18.cpp  resnet34.cpp  resnet50.cpp  run_benchmarks.py  single_conv_layer.cpp  vgg16.cpp  vgg19.cpp
examples/: CMakeLists.txt  conv_mnist.cpp  fc_mnist.cpp  mnist.cpp  rn5_mnist.cpp
lib/: CMakeLists.txt  poplibs-config.cmake  poplibs_mock-config.cmake
lib/enigma/: CMakeLists.txt  Optimizer.cpp  TensorOp.hpp
lib/popconv/: CMakeLists.txt  ChannelOps.cpp  ChannelOps.hpp  ConvPlan.cpp  ConvPlan.hpp  ConvReduce.cpp  ConvReduce.hpp  ConvUtil.cpp  ConvUtilInternal.cpp  ConvUtilInternal.hpp  ConvValidation.cpp  ConvValidation.hpp  Convolution.cpp  PerformanceEstimation.hpp  VertexOptim.hpp  Winograd.cpp  Winograd.hpp  codelets.cpp  popconvCodelets.cpp  popconvCycleEstimators.cpp  popconvCycleEstimators.hpp
lib/popfloat/: CMakeLists.txt  CastToGfloat.cpp  CastToHalf.cpp  GfloatExprUtil.cpp  codelets.cpp  popfloatCycleEstimators.cpp  popfloatCycleEstimators.hpp
lib/popfloat_mock/: CMakeLists.txt  codelets.cpp
lib/poplib_test/: CMakeLists.txt  Convolution.cpp  FullyConnected.cpp  GeneralMatrixAdd.cpp  GeneralMatrixMultiply.cpp  Lstm.cpp  MaxPooling.cpp  NonLinearity.cpp  Pass.cpp  Pooling.cpp  Rnn.cpp  Util.cpp
lib/poplibs_support/: Algorithms.cpp  CMakeLists.txt  ContiguousRegionsByTile.cpp  IclUtil.cpp  PlanConstraints.cpp  StridedRegions.cpp  TestDevice.cpp  TileHierarchy.cpp  TraceChannels.cpp  codelets.cpp  forceInterleavedEstimates.cpp  logging.cpp  popopsPerformanceEstimation.cpp
lib/poplibs_test/: CMakeLists.txt  CTCInference.cpp  CTCLoss.cpp  CTCUtil.cpp  Convolution.cpp  Embedding.cpp  FullyConnected.cpp  GeneralMatrixAdd.cpp  GeneralMatrixMultiply.cpp  Gru.cpp  Lstm.cpp  Multirate.cpp  NonLinearity.cpp  Norms.cpp  Pass.cpp  Pooling.cpp  Rnn.cpp  Util.cpp
lib/poplin/: CMakeLists.txt  CanonicalConvParams.hpp  ChannelOps.cpp  ChannelOps.hpp  Cholesky.cpp  ConvModel.cpp  ConvModel.hpp  ConvOptions.cpp  ConvOptions.hpp  ConvParams.cpp  ConvPartialsStridesPacking.cpp  ConvPartialsStridesPacking.hpp  ConvPlan.cpp  ConvPlan.hpp  ConvPlanTypes.hpp  ConvPreplan.cpp  ConvProgramTree.hpp  ConvReduce.cpp  ConvReduce.hpp  ConvReducePlan.cpp  ConvReducePlan.hpp  ConvTransforms.cpp  ConvTransforms.hpp  ConvTransformsBytesToCycles.cpp  ConvTransformsBytesToCycles.hpp  ConvUtil.cpp  ConvUtilInternal.cpp  ConvUtilInternal.hpp  ConvValidation.cpp  ConvValidation.hpp  ConvVertexType.cpp  ConvVertexType.hpp  ConvVertices.cpp  ConvVertices.hpp  Convolution.cpp  ConvolutionInternal.hpp  CreateConvPartialVertex.hpp  ExchangeEstimator.hpp  FullyConnected.cpp  LuFactorization.cpp  (+19 more)
lib/poplin_mock/: CMakeLists.txt  MatMul.cpp  codelets.cpp
lib/popnn/: ActivationMapping.cpp  Add.cpp  BatchNorm.cpp  CMakeLists.txt  CTCInference.cpp  CTCInferenceConnection.cpp  CTCInferenceConnection.hpp  CTCInferencePlan.cpp  CTCInferencePlan.hpp  CTCLoss.cpp  CTCLossPlan.cpp  CTCLossPlan.hpp  CTCPlanInternal.cpp  CTCPlanInternal.hpp  Cast.cpp  Cast.hpp  ConvPlan.cpp  ConvReuse.cpp  ConvUtil.cpp  ConvUtil.hpp  ConvValidation.cpp  ConvValidation.hpp  Convolution.cpp  CreatePoolingVertex.hpp  DimShuffle.cpp  DimShuffle.hpp  FullyConnected.cpp  FullyConnectedPlan.cpp  GroupNorm.cpp  Gru.cpp  HardSigmoid.cpp  HardSigmoid.hpp  LogSoftmax.cpp  Loss.cpp  Lstm.cpp  MatMul.cpp  MatMulPlan.hpp  MaxPool.cpp  Net.cpp  NonLinearity.cpp  (+39 more)
lib/popnn_mock/: CMakeLists.txt  codelets.cpp
lib/popnn_ref/: CMakeLists.txt  Convolution.cpp  FullyConnected.cpp  GeneralMatrixMultiply.cpp  MaxPooling.cpp  NonLinearity.cpp  Util.cpp
lib/popops/: Add.cpp  AllTrue.cpp  Cast.cpp  (+77 more)
tests/: AlgorithmTest.cpp  AllTrueTest.cpp  ApiCppVersionTest.cpp  BatchNormTest.cpp  BigNLVertices.cpp  BinaryOpTest.cpp  BlockSparseOpsTest.cpp  BlockSparseTest.cpp  BroadcastGeneratePatterns.cpp  BroadcastOptimiseTest.cpp  BroadcastToMatchTest.cpp  CMakeLists.txt  CircBufTests.cpp  CloneNTest.cpp  ConvOptionsTest.cpp  ConvPlanTest.cpp  ConvTest.cpp  ConvUtilTest.cpp  CopyToIpu.cpp  DimShuffleTest.cpp  DuplicateTensor.cpp  DynamicSliceCreation.cpp  DynamicSlicePlanningTest.cpp  DynamicSliceTest.cpp  ElementWiseUtilTest.cpp  EncodingTest.cpp  EnumerateDevices.cpp  ExprName.cpp  FillTest.cpp  FullyConnectedTest.cpp  GatherSimpleTest.cpp  GatherTest.cpp  GraphFunctionTest.cpp  GraphProgLocationTest.cpp  GraphReplication.cpp  HangTest.cpp  HistoryTests.cpp  HostSliceTensorTest.cpp  LargeSplitRegionsTest.cpp  LoopTest.cpp  (+56 more)
tools/: CMakeLists.txt  bench.py  bs_matmul_test.cpp  cast_to_gfloat.cpp  cast_to_gfloat.hpp  cast_to_gfloat_sr.cpp  collectives.cpp  consistent_executable_tool.cpp  ctc_beam_search.cpp  ctc_inference_model_validate.py  ctc_inference_validate.py  ctc_loss.cpp  ctc_model_validate.cpp  ctc_validate.cpp  embedding_layer.cpp  fully_connected_layer.cpp  general_matrix_multiply.cpp  generate_cycle_estimate.py  gru_layer.cpp  lstm_layer.cpp  matmul_bench.py  matrix_solver.cpp  max_pool_layer.cpp  multi_conv_layer.cpp  norm_layer.cpp  oct_conv_layer.cpp  plot_metric_variation.py  pooling_layer.cpp  random_generator.cpp  reduce_op.cpp  replicated_collectives.cpp  rnn_layer.cpp  single_conv_layer.cpp  single_conv_layer_random.py  single_conv_soak.py  sparse_embedding_tied_matmul.cpp  sparse_fc_layer.cpp  sparse_matmul.cpp  stalls_highlighter.py  static_sparse_matmul.cpp  (+4 more)
(+1375 files in other folders)
